deploy/development/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app
  name: sample-app-deploy
  namespace: mkaiho-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - image: mkaiho/ts-nodejs-sample-template:1.0
        name: sample-app
        ports:
          - containerPort: 3000
