deploy/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: mkaiho-dev
  labels:
    app: sample-app
spec:
  type: NodePort
  ports:
  - port: 3000 
    targetPort: 3000
    protocol: TCP
  selector:
    app: sample-app
